; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/ibm_newemac/extr_rgmii.c_rgmii_mode_mask.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/ibm_newemac/extr_rgmii.c_rgmii_mode_mask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @rgmii_mode_mask to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rgmii_mode_mask(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %4, align 4
  switch i32 %6, label %22 [
    i32 130, label %7
    i32 128, label %10
    i32 132, label %13
    i32 131, label %16
    i32 129, label %19
  ]

7:                                                ; preds = %2
  %8 = load i32, i32* %5, align 4
  %9 = call i32 @RGMII_FER_RGMII(i32 %8)
  store i32 %9, i32* %3, align 4
  br label %24

10:                                               ; preds = %2
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @RGMII_FER_TBI(i32 %11)
  store i32 %12, i32* %3, align 4
  br label %24

13:                                               ; preds = %2
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @RGMII_FER_GMII(i32 %14)
  store i32 %15, i32* %3, align 4
  br label %24

16:                                               ; preds = %2
  %17 = load i32, i32* %5, align 4
  %18 = call i32 @RGMII_FER_MII(i32 %17)
  store i32 %18, i32* %3, align 4
  br label %24

19:                                               ; preds = %2
  %20 = load i32, i32* %5, align 4
  %21 = call i32 @RGMII_FER_RTBI(i32 %20)
  store i32 %21, i32* %3, align 4
  br label %24

22:                                               ; preds = %2
  %23 = call i32 (...) @BUG()
  br label %24

24:                                               ; preds = %7, %10, %13, %16, %19, %22
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @RGMII_FER_RGMII(i32) #1

declare dso_local i32 @RGMII_FER_TBI(i32) #1

declare dso_local i32 @RGMII_FER_GMII(i32) #1

declare dso_local i32 @RGMII_FER_MII(i32) #1

declare dso_local i32 @RGMII_FER_RTBI(i32) #1

declare dso_local i32 @BUG(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
